styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
}

body {
  background-color: grey;
  color: white;
}

.heading {
  font-size: 50px;
  font-family: "Space Mono", monospace;
  font-weight: bold;
  text-align: center;
  margin-top: 30px;
  margin-bottom: 0px;
  letter-spacing: 2px;
}

.subhead {
  font-family: "Space Mono", monospace;
  font-weight: bold;
  font-size: 25px;
  text-align: center;
  margin-bottom: 100px;
}

.ref-links {
  text-align: center;
  letter-spacing: 2px;
  font-family: "Space Mono", monospace;
  font-weight: 400;
  font-size: 20px;
}

li {
  margin: 20px auto;
}

.ref-links a {
  text-decoration: none;
  color: white;
  padding: 0px 5px;
}

.ref-links a:hover {
  text-decoration: none;
  text-decoration-color: blue;
  color: blue;
  border: 2px solid blue;
}

.ref-links a::after {
  text-decoration: none;
}

.subhead a {
  text-decoration: none;
  color: darkgreen;
  padding: 0px 5px;
}

.subhead a:hover {
  text-decoration: underline;
  text-decoration-color: blue;
  color: blue;
  padding: 0px 5px;
}

.subhead a::after {
  text-decoration: none;
  color: darkgreen;
}

